This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

21-Nov-2002 (Lars Duening)  (3.3.308)
  - (closure, interpret.c, gcollect.c, mapping.c, dumpstat.c, efuns.c,
     call_out.c, comm.c) Merged lfuns with alien-lfuns - the space advantage
      of lfuns over alien-lfuns is no longer that big, and the merger
      simplifies the handling.

20-Nov-2002 (Lars Duening)  (3.3.307)
  - (closure.c) Corrected refcount errors in the handling
      of soon-to-be dangling alien-lfun closures.
  - (smalloc.c) Made sure that before each call to fatal() the thread-check
      is reset.
  - (closure, gcollect.c, interpret.c) Moved the context variables back to the
      closure_t toplevel - the alien-lfuns needed them as well, and the inner
      location was reason for strange crashes.

19-Nov-2002 (Lars Duening)  (3.3.306)
  - (closure.c, interpret.c) In order to convert a dangling lfun closure
      during a replace_program() into a dangling alien-lfun closure, the
      closure needs to be created as alien-lfun in the first place (reported
      by Pulami).

18-Nov-2002 (Lars Duening)
  - (closure, interpret.c, gcollect.c) Moved the context[] array from the top
      level of the closure_t into  closure_t.function.lfun, where it belongs.

17-Nov-2002 (Lars Duening)  (3.3.305)
  - (gcollect.c) When cleaning up an untabled string, a string was
      freed twice.
  - (svalue.h) Corrected the macro arguments to the put_object() family
      (reported by Ctx).
  - (many files) Removed trailing spaces from lineends.

16-Nov-2002 (Lars Duening)  (3.3.304)
  - (smalloc.c) If the allocator ran out of memory, the exit handling
      triggered the 'Multiple threads' safety check. Not really a problem,
      as the driver would exit anyway, but it obscures what is happening.
  - (prolang.y) Inline closures spanning include files were flagged
      as faulty, still the driver generated code.
