@@ -14,21 +14,24 @@
 ;;    3-3-structs.*: The 3-3 subbranch for 'struct' re-development,
 ;;                   branched off 3-3.294
 ;;
-;; TODO: general coloured efuns, sockets (p-020912),
+;; TODO: general coloured efuns
 ;; TODO:  sockets (p-020912),
 ;; TODO: state dumps.
 ;; TODO: Syslog
 ;; TODO: One .c-file per efun.
 ;; TODO: MCP
+;; TODO: PostgreSQL
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 308)
-(Parent-Version lpmud 3-3 307)
-(Version-Log "Merged lfun- with alien-lfun closures.")
+(Project-Version lpmud 3-3 309)
+(Parent-Version lpmud 3-3 308)
+(Version-Log "restore_object('#0:0') caught the driver in an endless loop.
+The thread-cleanup function now locks the structure before doing its thing.")
 (New-Version-Log
-"")
-(Checkin-Time "Thu, 21 Nov 2002 02:21:42 -0700")
+""
+)
+(Checkin-Time "Wed, 27 Nov 2002 00:45:07 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -64,7 +67,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.50 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.371 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.372 644))
   (HISTORY (lpmud/f/49_HISTORY 1.284 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.18 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -130,7 +133,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.24 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.15 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.4 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.39 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.40 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.29 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.21 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -169,7 +172,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.1 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.2 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -369,7 +372,7 @@
   (src/util/xerq/DONE (lpmud/k/49_DONE 1.1 644))
 
   ;; Additional files (Icons, etc)
-  (etc/README (lpmud/s/41_README 1.7 644))
+  (etc/README (lpmud/s/41_README 1.8 644))
   (etc/icon-32x32.xpm (lpmud/s/42_icon-32x32 1.1 644) :no-keywords)
   (etc/icon-16x16.xpm (lpmud/s/43_icon-16x16 1.1 644) :no-keywords)
   (etc/pb-ldmud.jpg (lpmud/n/11_pb-ldmud.j 1.1 644) :no-keywords)
@@ -379,6 +382,7 @@
   (etc/startmud.pl (lpmud/m/27_startmud.p 1.2 744) :no-keywords)
   (etc/start_mud (lpmud/m/45_start_mud 1.1 644))
   (etc/mudloop (lpmud/m/46_mudloop 1.1 644))
+  (etc/patch-o-matic (lpmud/c/b/8_patch-o-ma 1.1 644))
 
   ;; Driver-related include files for the mudlib
   (mudlib/sys/commands.h (lpmud/d/15_commands.h 1.3.1.3 644))
